--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!-------JavaScript 計算機-------->
+<!-------JS +-X繩 -------->
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
 <script language="JavaScript"> 
 <!-- hide script from old browser 
 var answer=0 
@@ -69,6 +72,8 @@ document.calc.result.value+="."
 }  
 } 
 // end hiding --> 
+ </head>
+
 </script> 
 <hr width="80%" size="3" color="#FF00FF"> 
 <form name="calc"> 
@@ -121,6 +126,6 @@ document.calc.result.value+="."
     </center> 
 </form> 
 <hr width="80%" size="3" noshade color="#FF00FF"> 
-           <!-------JavaScript 計算機 --------><br>         
-  <input onClick="javascript:this.form.txt.focus();this.form.txt.select();" type="button" value="全選"></p>
+           <!------- JS +-X繩 --------><br>         
+  <input onClick="javascript:this.form.txt.focus();this.form.txt.select();" type="button" value="瞼臘聶簿"></p>
 </body></html>  
