--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-------JS +-X÷ -------->
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+<meta http-equiv="Content-Type" content="text/html; charset=big5"> 
 <script language="JavaScript"> 
 <!-- hide script from old browser 
 var answer=0 
